fix: remove gloval overflow rule

--- a/client/src/style/global.scss
+++ b/client/src/style/global.scss
@@ -49,12 +49,6 @@ html {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-#app {
-  width: 100%;
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
 .label {
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -90,6 +84,10 @@ html {
   #mobile-row {
     width: 100% !important;
     min-width: 0 !important;
+  }
+
+  .mobile-hide {
+    display: none;
   }
 
 }
